--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aanos-m.github.io/sajweens-portfolio",
+  "homepage": "https://aanos-m.github.io/sajweens-portfolio",
   "name": "sajweens-portfolio",
   "version": "0.1.0",
   "private": true,
