--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
